--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
   <!-- Template Main CSS File -->
   <link href="style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal - v4.7.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -54,7 +48,7 @@
       <h1><a href="index.html">Mohamed<span style="color: #fd7014;"> Mehran</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2 class="animate__backInLeft">I'm a passionate <span>Front-End Web Developer</span> from India</h2>
+      <h2 class="animate__backInLeft">I'm a passionate <span>Front-End Engineer</span> from India</h2>
 
       <nav id="navbar" class="navbar animate__backInRight">
         <ul>
@@ -98,7 +92,7 @@
           <img src="its me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Front-End &amp; WordPress Developer</h3>
+          <h3>Front-End Engineer</h3>
           <p class="fst-italic" style="color: white;">
             
             Innovative Front End Developer with experience building and maintaining responsive
